--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -285,12 +285,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -e
-          
+
           BASE_VERSION="v1.5.8"
           
-          # Get all existing tags
-          EXISTING_TAGS=$(gh api repos/$REPO_OWNER/$REPO_NAME/tags --jq '.[].name' 2>/dev/null || true)
-          
+          # Fetch all existing tags using git ls-remote
+          EXISTING_TAGS=$(git ls-remote --tags https://github.com/$REPO_OWNER/$REPO_NAME.git | awk '{print $2}' | sed 's/refs\/tags\///' || true)
+
           # Find highest revision number for this base version
           MAX_REVISION=0
           while IFS= read -r tag; do
@@ -301,23 +301,29 @@ jobs:
               fi
             fi
           done <<< "$EXISTING_TAGS"
-          
+
+          # Generate new revision number and tag
           NEW_REVISION=$((MAX_REVISION + 1))
           NEW_TAG="$BASE_VERSION-r$NEW_REVISION"
-          
+
           echo "New tag generated: $NEW_TAG"
           echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
-          
-          # Create and push tag using git
+
+          # Optional: Check if tag already exists in remote
+          if git ls-remote --exit-code --tags origin "$NEW_TAG" > /dev/null 2>&1; then
+            echo "::error::Tag '$NEW_TAG' already exists in remote repository. Aborting."
+            exit 1
+          fi
+
+          # Configure Git
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          
+
+          # Create and push new tag
           git tag -a "$NEW_TAG" -m "Release $NEW_TAG"
-          
-          # Push the tag to the remote repository
-          git push --tags
-          
-          echo "Tag $NEW_TAG created successfully"
+          git push origin "$NEW_TAG"
+
+          echo "Tag $NEW_TAG created and pushed successfully" 
           
       - name: Set KSU Version and Release Name
         if: ${{ steps.release_check.outcome == 'success' }}
