--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -331,25 +331,23 @@ jobs:
           # Use temporary directories to avoid conflicts
           if [ "${{ inputs.kernelsu_variant }}" = "Next" ]; then
             echo "Processing Next variant"
-            git clone --depth 1 https://github.com/KernelSU-Next/KernelSU-Next.git ksu-next-tmp
+            git clone https://github.com/KernelSU-Next/KernelSU-Next.git ksu-next-tmp
             cd ksu-next-tmp
-            cd KernelSU-Next
             KSU_GIT_VERSION=$(git rev-list --count HEAD)
             KSU_VERSION=$((10000 + KSU_GIT_VERSION + 200))
             echo "Next version: $KSU_VERSION"
-            cd ../..
+            cd ..
             rm -rf ksu-next-tmp
             echo "RELEASE_NAME=\"GKI Kernel: KernelSU-Next ($KSU_VERSION) & SUSFS v1.5.8\"" >> $GITHUB_ENV
             
           elif [ "${{ inputs.kernelsu_variant }}" = "SukiSU" ]; then
             echo "Processing SukiSU variant"
-            git clone --depth 1 https://github.com/SukiSU-Ultra/SukiSU-Ultra.git suki-tmp
+            git clone https://github.com/SukiSU-Ultra/SukiSU-Ultra.git suki-tmp
             cd suki-tmp
-            cd SukiSU-Ultra
             KSU_GIT_VERSION=$(git rev-list --count HEAD)
             KSU_VERSION=$((10000 + KSU_GIT_VERSION + 606))
             echo "SukiSU version: $KSU_VERSION"
-            cd ../..
+            cd ..
             rm -rf suki-tmp
             echo "RELEASE_NAME=\"GKI Kernel: SukiSU ($KSU_VERSION) & SUSFS v1.5.8\"" >> $GITHUB_ENV
             
