--- a/.github/workflows/kernel-a14-6.1.yml
+++ b/.github/workflows/kernel-a14-6.1.yml
@@ -39,16 +39,16 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          #- sub_level: "25"
-          #  os_patch_level: "2023-10"
-          #- sub_level: "43"
-          #  os_patch_level: "2023-11"
-          #- sub_level: "57"
-          #  os_patch_level: "2024-01"
-          #- sub_level: "68"
-          #  os_patch_level: "2024-03"
-          #- sub_level: "75"
-          #  os_patch_level: "2024-05"
+          - sub_level: "25"
+            os_patch_level: "2023-10"
+          - sub_level: "43"
+            os_patch_level: "2023-11"
+          - sub_level: "57"
+            os_patch_level: "2024-01"
+          - sub_level: "68"
+            os_patch_level: "2024-03"
+          - sub_level: "75"
+            os_patch_level: "2024-05"
           - sub_level: "78"
             os_patch_level: "2024-06"
           #- sub_level: "84"
