--- a/.github/workflows/gki-kernel.yml
+++ b/.github/workflows/gki-kernel.yml
@@ -221,7 +221,7 @@ jobs:
           
           case "$branch_input" in
             "Stable(标准)")
-              echo "BRANCH=-" >> $GITHUB_ENV
+              echo "BRANCH=-s susfs-main" >> $GITHUB_ENV
               ;;
             "Dev(开发)")
               case "$variant_input" in
