--- a/.github/workflows/kernel-a15-6.6.yml
+++ b/.github/workflows/kernel-a15-6.6.yml
@@ -51,8 +51,8 @@ jobs:
           #   os_patch_level: "2024-09"
           # - sub_level: "50"
           #   os_patch_level: "2024-10"
-          #- sub_level: "56"
-          #  os_patch_level: "2024-11"
+          - sub_level: "56"
+            os_patch_level: "2024-11"
           #- sub_level: "57"
           #  os_patch_level: "2024-12"
           #- sub_level: "58"
