--- a/.github/workflows/get-manager.yml
+++ b/.github/workflows/get-manager.yml
@@ -14,74 +14,112 @@ jobs:
   get_ksu_manager:
     runs-on: ubuntu-latest
     env:
+      # Environment variables for CCACHE, which are good to keep.
       CCACHE_COMPILERCHECK: "%compiler% -dumpmachine; %compiler% -dumpversion"
       CCACHE_NOHASHDIR: "true"
       CCACHE_HARDLINK: "true"
+      # Use the default GITHUB_TOKEN for API access
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
-      - name: 安装依赖
-        run: sudo apt update && sudo apt upgrade -y && sudo apt install -y git curl jq
+      - name: 安装依赖 (Install Dependencies)
+        run: sudo apt update && sudo apt install -y git curl jq
 
-      - name: 设定 KSU 环境变量
+      - name: 设定 KSU 环境变量 (Set KSU Environment Variables)
         run: |
           if [ "${{ inputs.kernelsu_variant }}" == "Next" ]; then
             echo "This is the Next variant"
-            git clone https://github.com/KernelSU-Next/KernelSU-Next.git
-            cd KernelSU-Next
+            # Clone and calculate version for Next
+            git clone --depth 1 https://github.com/KernelSU-Next/KernelSU-Next.git /tmp/kernelsu_repo
+            cd /tmp/kernelsu_repo
             KSU_GIT_VERSION=$(git rev-list --count HEAD)
-            # ???
             KSU_VERSION=$((10000 + KSU_GIT_VERSION + 200))
-            echo $KSU_VERSION
             echo "KSU_VERSION=$KSU_VERSION" >> $GITHUB_ENV
           elif [ "${{ inputs.kernelsu_variant }}" == "SukiSU" ]; then
             echo "This is the SukiSU variant"
-            git clone https://github.com/SukiSU-Ultra/SukiSU-Ultra.git
-            cd SukiSU-Ultra
+            # Clone and calculate version for SukiSU
+            git clone --depth 1 https://github.com/SukiSU-Ultra/SukiSU-Ultra.git /tmp/kernelsu_repo
+            cd /tmp/kernelsu_repo
             KSU_GIT_VERSION=$(git rev-list --count HEAD)
             KSU_VERSION=$((10000 + KSU_GIT_VERSION + 700))
-            echo $KSU_VERSION
             echo "KSU_VERSION=$KSU_VERSION" >> $GITHUB_ENV
           else
-            echo "Unknown variant"
+            echo "Error: Unknown variant ${{ inputs.kernelsu_variant }}"
+            exit 1
           fi
+          
+          echo "Calculated KSU_VERSION: $KSU_VERSION"
 
-      - name: 添加 KernelSU
+      - name: 下载 KernelSU Manager (Download KernelSU Manager)
         run: |
-          if [ "${{ inputs.kernelsu_variant }}" == "Next" ]; then
+          VARIANT="${{ inputs.kernelsu_variant }}"
+          TOKEN="${{ secrets.GITHUB_TOKEN }}" # Use a local variable for clarity
+
+          # 1. Set Repository Variables
+          if [ "$VARIANT" == "Next" ]; then
             echo "KernelSU Next..."
             REPO="KernelSU-Next/KernelSU-Next"
             FILENAME="build-manager-ci.yml"
-          elif [ "${{ inputs.kernelsu_variant }}" == "SukiSU" ]; then
+          elif [ "$VARIANT" == "SukiSU" ]; then
             echo "SukiSU..."
             REPO="SukiSU-Ultra/SukiSU-Ultra"
             FILENAME="build-manager.yml"
+          else
+            echo "Error: Unknown kernelsu_variant input: $VARIANT" >&2
+            exit 1
           fi
 
-          # 获取最新成功构建的 ID
-          BUILD_ID=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          "https://api.github.com/repos/$REPO/actions/workflows/$FILENAME/runs?status=success" | \
+          # 2. Get the latest successful build ID
+          echo "Fetching latest successful BUILD_ID for $REPO workflow $FILENAME..."
+          BUILD_ID=$(curl -s -H "Authorization: token $TOKEN" \
+          "https://api.github.com/repos/$REPO/actions/workflows/$FILENAME/runs?status=success&per_page=1" | \
           jq -r '.workflow_runs[0].id')
-          echo 'BUILD_ID=$BUILD_ID'
-          # 获取该构建的 Artifacts
-          ARTIFACTS=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/$REPO/actions/runs/$BUILD_ID/artifacts")
-          echo 'ARTIFACTS=$ARTIFACTS'
-          # 获取 Manager 文件的下载链接
-          if [ "${{ inputs.kernelsu_variant }}" == "Next" ]; then
-            DOWNLOAD_URL=$(echo "$ARTIFACTS" | jq -r '.artifacts[] | select(.name | contains("Manager")) | .archive_download_url')
-          elif [ "${{ inputs.kernelsu_variant }}" == "SukiSU" ]; then
-            DOWNLOAD_URL=$(echo "$ARTIFACTS" | jq -r '.artifacts[] | select(.name | contains("Manager")) | .archive_download_url')
+          
+          echo "Retrieved BUILD_ID: $BUILD_ID"
+          
+          # CRITICAL CHECK: Ensure BUILD_ID is valid
+          if [ -z "$BUILD_ID" ] || [ "$BUILD_ID" == "null" ]; then
+              echo "Error: Could not retrieve a successful BUILD_ID." >&2
+              echo "Check that the upstream workflow has run successfully on $REPO." >&2
+              exit 1
           fi
 
-          # 下载 Manager 文件
-          curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -o "${{ inputs.kernelsu_variant }}-管理器(${{ env.KSU_VERSION }}).zip" "$DOWNLOAD_URL"
-          echo "Manager 文件已下载为：${{ inputs.kernelsu_variant }}-管理器(${{ env.KSU_VERSION }}).zip"
-          unzip *.zip
+          # 3. Get the Artifacts for that build
+          echo "Fetching artifacts list for run ID $BUILD_ID..."
+          ARTIFACTS=$(curl -s -H "Authorization: token $TOKEN" \
+            "https://api.github.com/repos/$REPO/actions/runs/$BUILD_ID/artifacts")
+          
+          # 4. Get Manager file download URL
+          DOWNLOAD_URL=$(echo "$ARTIFACTS" | jq -r '.artifacts[] | select(.name | contains("Manager")) | .archive_download_url')
+          
+          echo "Retrieved DOWNLOAD_URL: $DOWNLOAD_URL"
+          
+          # CRITICAL CHECK: Ensure DOWNLOAD_URL is valid
+          if [ -z "$DOWNLOAD_URL" ] || [ "$DOWNLOAD_URL" == "null" ]; then
+              echo "Error: Could not find the Manager artifact download URL." >&2
+              echo "Artifacts response start (Debug): $(echo "$ARTIFACTS" | head -c 200)" >&2
+              exit 1
+          fi
+          
+          # 5. Download Manager file (Original failure point)
+          OUTPUT_NAME="$VARIANT-管理器(${{ env.KSU_VERSION }}).zip"
+          echo "Starting download of Manager file to: $OUTPUT_NAME"
+          
+          curl -L -H "Authorization: token $TOKEN" -o "$OUTPUT_NAME" "$DOWNLOAD_URL"
+          
+          # Check if the final download curl command failed
+          if [ $? -ne 0 ]; then
+              echo "Error: Final curl download failed for URL $DOWNLOAD_URL" >&2
+              exit 1
+          fi
+          
+          echo "Manager 文件已下载为：$OUTPUT_NAME"
+          unzip "$OUTPUT_NAME"
 
-      - name: 上传编译资产
+      - name: 上传编译资产 (Upload Build Artifacts)
         uses: actions/upload-artifact@v4
         with:
+          # Use the calculated KSU_VERSION from the environment
           name: ${{ inputs.kernelsu_variant }}-Manager(${{ env.KSU_VERSION }})
           path: |
             *.apk
