Comment out sub_level entries and update patch level

--- a/.github/workflows/kernel-a14-6.1.yml
+++ b/.github/workflows/kernel-a14-6.1.yml
@@ -49,8 +49,8 @@ jobs:
           #  os_patch_level: "2024-03"
           #- sub_level: "75"
           #  os_patch_level: "2024-05"
-          - sub_level: "78"
-            os_patch_level: "2024-06"
+          #- sub_level: "78"
+          #  os_patch_level: "2024-06"
           #- sub_level: "84"
           #  os_patch_level: "2024-07"
           #- sub_level: "90"
@@ -61,8 +61,8 @@ jobs:
           #  os_patch_level: "2024-10"
           #- sub_level: "112"
           #  os_patch_level: "2024-11"
-          - sub_level: "115"
-            os_patch_level: "2024-12"
+          - sub_level: "145"
+            os_patch_level: "2025-09"
           #- sub_level: "118"
           #  os_patch_level: "2025-01"
           #- sub_level: "124"
